<resources>
    <string name="app_name">FB Downloader</string>
    <string name="enter_something">enter_something</string>
    <string name="paste_url">Paste facebook url…</string>
    <string name="to_do">TODO</string>
    <string name="loading">Loading please wait</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="download_btn">Download</string>
    <string name="video_avail">Video available in two Formats</string>
    <string name="hd_format">High Quality</string>
    <string name="sd_format">Normal Quality</string>
    <string name="preview">Video Preview</string>
    <string name="default_url">https://fb.watch/5dhpRJMBdL/</string>
    <string name="login">Login with facebook</string>
</resources>