<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress_Bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/search_bar1"
            style="@style/customEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:fontFamily="@font/hind"
            android:hint="@string/paste_url"
            android:text="@string/default_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searching_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/hind"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/video_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/hind"
        android:text="@string/preview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sd_quality_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sd_format"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hd_quality_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/hd_format"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/white" />
</LinearLayout>